lesson_1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nsi-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nsi
  strategy:
    type: Recreate
  template:
      metadata:
        labels:
          app: nsi
      spec:
        containers:
          - name: nsi
            image: linked/nsi:v1
            ports:
              - containerPort: 8080
            livenessProbe:
              httpGet:
                port: 8080
                path: /
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8080
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
